[Update] Minimal by default

--- a/assets/src/css/Base/_base.pcss
+++ b/assets/src/css/Base/_base.pcss
@@ -1,10 +1,53 @@
 /* --------------------------------------------------------------------------
     #Base
 -------------------------------------------------------------------------- */
+/**
+ *
+ * --color-text-primary project color
+ * --color-text-second  project color
+ * --color-text-third   project color
+ * --color-accent-gray  project color
+ * --color-bg           project color { background-color }
+ * --color-twitter      default color
+ * --color-facebook     default color
+ * --color-hatena       default color
+ * --color-rss          default color
+ * --color-pocket       default color
+ * --color-white        default color
+ * --color-black        default color
+ * --color-light-gray   default color { utility }
+ * --comp-base-lower           project size  { design-comp fixed value }
+ * --comp-base-upper           project size  { design-comp fixed value }
+ * --font-serif-ja             project font  { japanese language serif }
+ * --font-serif-en             project font  { english language serif }
+ * --font-sans-ja              project font  { english language sans-serif }
+ * --font-sans-en              project font  { english language sans-serif }
+ * --font-size-default         project size  { type: value 16px }
+ * --font-size-mobile          project size  { type: value 14.4px }
+ * --font-size-lower-limit     project size  { type: value 12px }
+ * --font-weight-base          project size  { type: value 400 }
+ * --font-wieght-light         project size  { type: value 300 }
+ * --leading-setting-body      project size  { type: value 1.5(em) }
+ * --layout-inner-xxl          project size  { type: value 1920px }
+ * --layout-inner-xl           project size  { type: value 1400px }
+ * --layout-inner-lg           project size  { type: value 1200px }
+ * --layout-inner-md           project size  { type: value 911px }
+ * --layout-inner-sm           project size  { type: value 768px }
+ * --layout-inner-xs           project size  { type: value 540px }
+ * --zindex-Fixed-sidebar      project value 
+ * --zindex-Fixed-header       project value 
+ * --zindex-dropdown-nav       project value
+ * --zindex-drawer-btn         project value
+ * --zindex-pointer            project value
+ * --zindex-modal-container    project value
+ * --zindex-animate-layer01    project value  { Loading Aniamtion Sample }
+ * --zindex-animate-layer02    project value  { Loading Aniamtion Sample }
+ * --zindex-animate-layer03    project value  { Loading Aniamtion Sample }
+ * --zindex-animate-layer04    project value  { Loading Aniamtion Sample }
+ * --private-header-height-sp  project private variable sample
+ * --private-header-height-pc  project private variable sample
+ */
 :root {
-    --color-white: #fff;
-    --color-black: #151515;
-    --color-light-gray: #cccccc;
     --color-text-primary: #393939;
     --color-text-second: #222222;
     --color-text-third: #848484;
@@ -15,6 +58,9 @@
     --color-hatena: #008fde;
     --color-pocket: #ef3e56;
     --color-rss: #fe7710;
+    --color-white: #ffffff;
+    --color-black: #151515;
+    --color-light-gray: #cccccc;
     --comp-base-lower: 414;
     --comp-base-upper: 1366;
     --font-serif-ja: 'Noto Serif JP', YuMincho, 'Yu Mincho', 'Hiragino Mincho ProN', 'Hiragino Mincho Pro', serif;
