--- a/assets/src/css/Base/_base.pcss
+++ b/assets/src/css/Base/_base.pcss
@@ -79,6 +79,30 @@
     --layout-inner-md: 911px;
     --layout-inner-sm: 768px;
     --layout-inner-xs: 540px;
+    --transition-in-sine: cubic-bezier(.47, 0, .745, .715);
+    --transition-out-sine: cubic-bezier(.39, .575, .565, 1);
+    --transition-in-out-sine: cubic-bezier(.445, .05, .55, .95);
+    --transition-in-quad: cubic-bezier(.55, .085, .68, .53);
+    --transition-out-quad: cubic-bezier(.25, .46, .45, .94);
+    --transition-in-out-quad: cubic-bezier(.455, .03, .515, .955);
+    --transition-in-cubic: cubic-bezier(.55, .055, .675, .19);
+    --transition-out-cubic: cubic-bezier(.215, .61, .355, 1);
+    --transition-in-out-cubic: cubic-bezier(.645, .045, .355, 1);
+    --transition-in-quart: cubic-bezier(.895, .03, .685, .22);
+    --transition-out-quart: cubic-bezier(.165, .84, .44, 1);
+    --transition-in-out-quart: cubic-bezier(.77, 0, .175, 1);
+    --transition-in-quint: cubic-bezier(.755, .05, .855, .06);
+    --transition-out-quint: cubic-bezier(.23, 1, .32, 1);
+    --transition-in-out-quint: cubic-bezier(.86, 0, .07, 1);
+    --transition-in-expo: cubic-bezier(.95, .05, .795, .035);
+    --transition-out-expo: cubic-bezier(.19, 1, .22, 1);
+    --transition-in-out-expo: cubic-bezier(1, 0, 0, 1);
+    --transition-in-circ: cubic-bezier(.6, .04, .98, .335);
+    --transition-out-circ: cubic-bezier(.075, .82, .165, 1);
+    --transition-in-out-circ: cubic-bezier(.785, .135, .15, .86);
+    --transition-in-back: cubic-bezier(.6, -.28, .735, .045);
+    --transition-out-back: cubic-bezier(.175, .885, .32, 1.275);
+    --transition-in-out-back: cubic-bezier(.68, -.55, .265, 1.55);
     --zindex-Fixed-sidebar: 90;
     --zindex-Fixed-header: 100;
     --zindex-dropdown-nav: 110;
