[Fix] typo "Layouts/*"

--- a/assets/src/css/style.pcss
+++ b/assets/src/css/style.pcss
@@ -4,7 +4,7 @@
 @import-glob "./Tools/*.pcss";
 @import-glob "./Generic/*.pcss";
 @import-glob "./Base/*.pcss";
-@import-glob "./Layoouts/*.pcss";
+@import-glob "./Layouts/*.pcss";
 @import-glob "./Object/*.pcss";
 @import-glob "./Site/*.pcss";
 @import-glob "./Components/*.pcss";
